--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,6 @@
-@import "content.less";
-body {
-  background:tomato;
-  font-family: sans-serif;
-  color: white;
-}
+@import "blocks/body.less";
+
+@import "blocks/visually-hidden.less";
+
+@import "blocks/main-nav.less";
+
