Начинаем вёрстку с препроцессором, модуль 3 задание 1, правка 1

--- a/source/less/blocks/body.less
+++ b/source/less/blocks/body.less
@@ -1,6 +1,9 @@
 body {
-  background: #81b3d2;
-  font-family: sans-serif;
-  color: #2f13cf;
-}
+  display: block;
+  width: 321px;
   
+  font-family: "PT Sans", "Arial", sans-serif;
+  color: #000000;
+  
+  background-color: #ffffff;
+}
