--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,32 @@
+@import "sedonafonts.less";
 @import "blocks/body.less";
-
 @import "blocks/visually-hidden.less";
-
 @import "blocks/main-nav.less";
-
+@import "blocks/page-main.less";
+@import "blocks/places.less";
+@import "blocks/advantages.less";
+@import "blocks/reasons.less";
+@import "blocks/reasons-list.less";
+@import "blocks/realtown.less";
+@import "blocks/bridge.less";
+@import "blocks/square.less";
+@import "blocks/road.less";
+@import "blocks/tourists.less";
+@import "blocks/question.less";
+@import "blocks/button.less";
+@import "blocks/social.less";
+@import "blocks/copyright.less";
+@import "blocks/footer.less";
+@import "blocks/photos-head.less";
+@import "blocks/photos-list.less";
+@import "blocks/photos-position.less";
+@import "blocks/photos-item.less";
+@import "blocks/form-head.less";
+@import "blocks/form-section.less";
+@import "blocks/customer.less";
+@import "blocks/contacts.less";
+@import "blocks/radio.less";
+@import "blocks/checkbox.less";
+@import "blocks/discription.less";
+@import "blocks/site-list.less";
+@import "blocks/map.less";
