задание 3, устранены замечания после первой проверки

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -8,13 +8,13 @@
 .advantages__item {
   display: block;
   margin-bottom: 29px;
-  padding-left: 5px;
+  padding-left: 45px;
   width: 250px;
   text-align: left;
 }
 
 .advantages__title {
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-transform: uppercase; 
@@ -58,7 +58,7 @@
 }
 
 .advantages__description {
-  font-size: 14px;
+  font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
   text-transform: uppercase; 
