--- a/source/less/blocks/checkbox.less
+++ b/source/less/blocks/checkbox.less
@@ -3,7 +3,7 @@
 }
 
 .checkbox__title {
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-align: center;
@@ -12,7 +12,7 @@
 }
 
 .checkbox__one {
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-align: left;
@@ -21,7 +21,7 @@
 }
 
 .checkbox__two {
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-align: left;
@@ -30,7 +30,7 @@
 }
 
 .checkbox__three {
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-align: left;
@@ -39,7 +39,7 @@
 }
 
 .checkbox__four {
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-align: left;
