--- a/source/less/blocks/customer.less
+++ b/source/less/blocks/customer.less
@@ -3,7 +3,7 @@
 }
 
 .customer__title {
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-align: center;
@@ -12,7 +12,7 @@
 }
 
 .customer__name {
-  font-size: 14px;
+  font-size: @little-font;
   font-weight: 400;
   line-height: 26px;
   text-align: left;
@@ -21,7 +21,7 @@
 }
 
 .customer__surname {
-  font-size: 14px;
+  font-size: @little-font;
   font-weight: 400;
   line-height: 26px;
   text-align: left;
@@ -30,7 +30,7 @@
 }
 
 .customer__patronymic {
-  font-size: 14px;
+  font-size: @little-font;
   font-weight: 400;
   line-height: 26px;
   text-align: left;
