--- a/source/less/blocks/discription.less
+++ b/source/less/blocks/discription.less
@@ -3,7 +3,7 @@
 }
 
 .discription__title {
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-align: center;
@@ -12,7 +12,7 @@
 }
 
 .discription__text {
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-align: left;
