--- a/source/less/blocks/photos-head.less
+++ b/source/less/blocks/photos-head.less
@@ -10,8 +10,9 @@
   width: 250px;
   height: 44px;
 
+  background-size: 250px;
   background-repeat: no-repeat;
-  background-image: url("../img/text-sedona250x44.svg");
+  background-image: url("../img/text-sedona.svg");
 }
 
 .photos-head__picture--sedona::after {
@@ -31,7 +32,7 @@
   padding: 20px;
   padding-bottom: 9px;
 
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-align:center;
@@ -40,7 +41,7 @@
 }
 
 .photos-head__text {
-  font-size: 14px;
+  font-size: @little-font;
   line-height: 26px;
   text-align: center;
   text-transform: uppercase;
