--- a/source/less/blocks/places.less
+++ b/source/less/blocks/places.less
@@ -6,13 +6,12 @@
   text-align: center;
   margin: 0;
   
-  background-color: #81b3d2;
+  background-color: @blue;
 }
 
 .places__title {
   display: block;
-  margin: 0;
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-transform: uppercase;
@@ -21,7 +20,7 @@
 .places__number {
   display: block;
   margin-top: 10px;
-  font-size: 14px;
+  font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
 }
@@ -29,7 +28,7 @@
 .places__recomendation {
   display: block;
 
-  font-size: 14px;
+  font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
   text-transform: uppercase;
