--- a/source/less/blocks/question.less
+++ b/source/less/blocks/question.less
@@ -7,7 +7,7 @@
 
 .question__text{
   display: block;
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-align:center;
@@ -18,7 +18,7 @@
 .question__content {
   display: block;
   margin-bottom: 35px;
-  font-size: 14px;
+  font-size: @little-font;
   line-height: 26px;
   text-align: center;
   text-transform: uppercase;
