--- a/source/less/main.less
+++ b/source/less/main.less
@@ -1,9 +1,17 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   display: block;
   width: 321px;
-  
   font-family: "PT Sans", "Arial", sans-serif;
   color: #000000;
-  
   background-color: #ffffff;
 }
