--- a/source/less/blocks/bridge.less
+++ b/source/less/blocks/bridge.less
@@ -6,24 +6,24 @@
   margin-top: 12px;
   color: #ffffff;
   text-align: center;
-  background-color: #81b3d2;
+  background-color: @blue;
 }
 
 .bridge__title {
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-transform: uppercase;
 }
 
 .bridge__number {
-  font-size: 14px;
+  font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
 }
 
 .bridge__recomendation {
-  font-size: 14px;
+  font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
   text-transform: uppercase;
