--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -4,14 +4,12 @@
   width: 280px;
   height: 58px;
 
-  font-size: 21px;
+  font-size: @large-font;
   font-weight: 700;
   line-height: 58px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
   color: #ffffff;
-
-  background-color: #81b3d2;
-
+  background-color: @blue;
 }
