--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -2,7 +2,7 @@
   border: none;
 }
 .contacts__title {
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-align: center;
@@ -11,7 +11,7 @@
 }
 
 .contacts__tel {
-  font-size: 14px;
+  font-size: @medium-font;
   font-weight: 400;
   line-height: 26px;
   text-align: left;
@@ -20,7 +20,7 @@
 }
 
 .contacts__email {
-  font-size: 14px;
+  font-size: @little-font;
   font-weight: 400;
   line-height: 26px;
   text-align: left;
