--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -8,7 +8,7 @@
 
 .copyright__text {
   padding-bottom: 30px;
-  font-size: 14px;
+  font-size: @little-font;
   font-weight: 400;
   line-height: 26px;
   text-transform: uppercase;
