--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -3,7 +3,7 @@
   margin-top: 25px;
   margin-left:auto;
   margin-right: auto;
-  font-size: 21px;
+  font-size: @large-font;
   font-weight: 700;
   line-height: 26px;
   text-align: center;
