--- a/source/less/blocks/radio.less
+++ b/source/less/blocks/radio.less
@@ -3,7 +3,7 @@
 }
 
 .radio__title {
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-align: center;
@@ -12,7 +12,7 @@
 }
 
 .radio__one {
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-align: left;
@@ -21,7 +21,7 @@
 }
 
 .radio__two {
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-align: left;
@@ -30,11 +30,10 @@
 }
 
 .radio__three {
-  font-size: 18px;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-align: left;
   text-transform: none;
   color: #000000;
 }
-
