--- a/source/less/blocks/realtown.less
+++ b/source/less/blocks/realtown.less
@@ -20,13 +20,13 @@
   text-align: center;
   color: #ffffff;
    
-  background-color: #81b3d2;
+  background-color: @blue;
 }
 
 .realtown::before {
   content:"";
   position: absolute;
-  top: -8px;
+  top: -10px;
   left: 0px;
   width: 320px;
   height: 40px;
@@ -37,7 +37,7 @@
 .realtown__title {
   display: inline-block;
   margin-bottom: 0px;
-  padding-top: 53px;
+  padding-top: 49px;
   padding-bottom: 0px;
 
   font-size: 18px;
@@ -49,15 +49,19 @@
 .realtown__number {
   display: block;
   margin-top: 0px;
-  padding-top: 7px;
-  font-size: 14px;
+  padding-top: 10px;
+  font-size: @little-font;
   font-weight: 400;
   line-height: 20px;
 }
 
 .realtown__recomendation {
   display: block;
-  font-size: 14px;
+  padding: 0;
+  margin: 0;
+  padding-top: 15px;
+
+  font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
   text-transform: uppercase;
