--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -15,8 +15,9 @@
   width: 46px;
   height: 48px;
   margin-right: 6px;
+  font-size: 0;
 
-  background-color: #81b3d2;
+  background-color: @blue;
 }
 
 .social__link--twitter::before {
