--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,7 +1,10 @@
-@import "sedonafonts.less";
-@import "blocks/body.less";
-@import "blocks/visually-hidden.less";
+@import "fonts.less";
+@import "main.less";
+@import "mixins.less";
+@import "variables.less";
 @import "blocks/main-nav.less";
+@import "blocks/site-list.less";
+@import "blocks/visually-hidden.less";
 @import "blocks/page-main.less";
 @import "blocks/places.less";
 @import "blocks/advantages.less";
@@ -28,5 +31,5 @@
 @import "blocks/radio.less";
 @import "blocks/checkbox.less";
 @import "blocks/discription.less";
-@import "blocks/site-list.less";
 @import "blocks/map.less";
+@import "blocks/test-button";
