Задание 1 модуль 3, правка от 10.04.2020

--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,13 +1,17 @@
 .copyright {
   position: relative;
   display: block;
+  display: block;
+  margin: 0;
+  padding: 0;
   width: 320px;
-  margin-top: 50px;
-  text-align: center;
 }
 
 .copyright__text {
-  padding-bottom: 30px;
+  margin: 0;
+  padding: 0;
+  margin-left: 97px;
+ 
   font-size: @little-font;
   font-weight: 400;
   line-height: 26px;
@@ -18,8 +22,8 @@
 .copyright__link--htmlacademy::before {
   content:"";
   position: absolute;
-  top: -2px;
-  left: 225px;
+  top: 36px;
+  left: 199px;
   width: 27px;
   height: 34px;
  
