--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -7,9 +7,11 @@
 
 .advantages__item {
   display: block;
-  margin-bottom: 29px;
-  padding-left: 45px;
-  width: 250px;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 15px;
+  padding-left: 50px;
+  width: 260px;
   text-align: left;
 }
 
@@ -25,7 +27,7 @@
   content:"";
   position: absolute;
   top: 22px;
-  left: 0px;
+  left: 3px;
   width: 37px;
   height: 36px;
   
