--- a/source/less/blocks/bridge.less
+++ b/source/less/blocks/bridge.less
@@ -1,15 +1,19 @@
 .bridge {
-  display: inline-block;
-  padding-top: 20px;
+  display: block;
+  margin: 0;
+  padding: 0;
+  margin-top: 8px;
+  padding-top: 40px;
   width: 320px;
-  height: 171px;
-  margin-top: 12px;
   color: #ffffff;
   text-align: center;
   background-color: @blue;
 }
 
 .bridge__title {
+  display: block;
+  margin: 0;
+  padding: 0;
   font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
@@ -17,12 +21,18 @@
 }
 
 .bridge__number {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-top: 10px;
   font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
 }
 
 .bridge__recomendation {
+  display: block;
+  margin-bottom: 40px;
   font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
