--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,8 +1,22 @@
+footer {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-top: 30px;
+}
+
+.footer__copyright {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-top: 37px;
+}
+
 .footer__title {
   display: block;
-  margin-top: 25px;
-  margin-left:auto;
-  margin-right: auto;
+  margin: 0;
+  padding: 0;
+  
   font-size: @large-font;
   font-weight: 700;
   line-height: 26px;
