--- a/source/less/blocks/places.less
+++ b/source/less/blocks/places.less
@@ -1,16 +1,19 @@
 .places {
   display: block;
-  width: 280px;
-  height: 120px;
-  padding: 20px;
-  text-align: center;
   margin: 0;
-  
+  padding: 0;
+  padding-top: 23px;
+  width: 320px;
+  text-align: center;
+
   background-color: @blue;
 }
 
 .places__title {
   display: block;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 8px;
   font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
@@ -19,7 +22,9 @@
 
 .places__number {
   display: block;
-  margin-top: 10px;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 16px;
   font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
@@ -27,7 +32,9 @@
 
 .places__recomendation {
   display: block;
-
+  margin: 0;
+  padding: 0;
+  padding-bottom: 32px;
   font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
