--- a/source/less/blocks/question.less
+++ b/source/less/blocks/question.less
@@ -1,15 +1,19 @@
 .question {
+  display: block;
   width: 320px;
-  margin-top: 43px;
-
+  margin: 0;
   padding: 0;
+  padding-top: 23px;
 }
 
 .question__text{
   display: block;
-  font-size: @medium-font;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 18px;
+  font-size: @large-font;
   font-weight: 700;
-  line-height: 26px;
+  line-height: 24px;
   text-align:center;
   text-transform: uppercase;
   color: #000000;
@@ -17,7 +21,9 @@
 
 .question__content {
   display: block;
-  margin-bottom: 35px;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 33px;
   font-size: @little-font;
   line-height: 26px;
   text-align: center;
@@ -27,5 +33,6 @@
 
 .question__search {
   display: block;
-  margin-bottom: 30px;
+  margin: 0;
+  padding: 0;
 }
