--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -1,23 +1,5 @@
-.zero-margin() {
+.list-reset() {
   margin: 0;
-}
-
-.zero-padding() {
   padding: 0;
-}
-
-.list-none() {
   list-style: none;
-}
-
-ul { 
-  .zero-margin;
-  .zero-padding;
-  .list-none;
-}
-
-ol {
-  .zero-margin;
-  .zero-padding;
-  .list-none;
 }
