--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,7 @@
 @import "fonts.less";
 @import "main.less";
 @import "mixins.less";
+@import "normalize.less";
 @import "variables.less";
 @import "blocks/main-nav.less";
 @import "blocks/site-list.less";
@@ -32,4 +33,3 @@
 @import "blocks/checkbox.less";
 @import "blocks/discription.less";
 @import "blocks/map.less";
-@import "blocks/test-button";
