--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,7 +1,7 @@
 .advantages {
   position: relative;
+  .list-reset();
   margin-left: 20px;
-  margin-bottom: 0px;
   padding-top: 32px;
 }
 
@@ -19,7 +19,7 @@
   font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
-  text-transform: uppercase; 
+  text-transform: uppercase;
   color: #000000;
 }
 
@@ -30,7 +30,6 @@
   left: 3px;
   width: 37px;
   height: 36px;
-  
   background-repeat: no-repeat;
   background-image: url("../img/icon-house37x36.svg");
 }
@@ -42,7 +41,6 @@
   left: 6px;
   width: 32px;
   height: 38px;
-  
   background-repeat: no-repeat;
   background-image: url("../img/icon-gift32x38.svg");
 }
@@ -54,7 +52,6 @@
   left: 0px;
   width: 40px;
   height: 35px;
-  
   background-repeat: no-repeat;
   background-image: url("../img/icon-burger40x35.svg");
 }
@@ -63,6 +60,6 @@
   font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
-  text-transform: uppercase; 
+  text-transform: uppercase;
   color: #333333;
 }
