--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -3,6 +3,7 @@ footer {
   margin: 0;
   padding: 0;
   padding-top: 30px;
+  min-height: 233px;
 }
 
 .footer__copyright {
@@ -16,7 +17,6 @@ footer {
   display: block;
   margin: 0;
   padding: 0;
-  
   font-size: @large-font;
   font-weight: 700;
   line-height: 26px;
