--- a/source/less/blocks/form-head.less
+++ b/source/less/blocks/form-head.less
@@ -1,28 +1,26 @@
 .form-head {
   position: relative;
+  margin: 0;
+  padding: 0;
 }
 
-.form-head__picture--sedona::before {
-  content:"";
-  position: absolute;
-  top: 52px;
-  left: 46px;
-  width: 229px;
-  height: 39px;
-   
-  background-size: 229px;
+.form-head__picture {
+  margin: 0;
+  padding: 0;
+  width: 320px;
+  height: 158px;
+  background-size: cover;
   background-repeat: no-repeat;
-  background-image: url("../img/text-sedona.svg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
 }
 
-.form-head__picture--sedona::after {
+.form-head--sedona::after {
   content:"";
   position: absolute;
   top: 132px;
   left: 0px;
   width: 322px;
   height: 26px;
-  
   background-size: 322px;
   background-repeat: no-repeat;
   background-image: url("../img/bg-intro-triangle-mobile.svg");
