--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -1,36 +1,27 @@
 .reasons {
-  position:relative;
+  position: relative;
   margin: 0;
   padding: 0;
 }
 
-.reasons__picture {
-  height: 389px;
+.reasons__index {
   margin: 0;
-  padding-top: 2px;
-}
-
-.reasons__position--sedona::after {
-  content:"";
-  position: absolute;
-  top:92px;
-  left: 20px;
-  width: 281px;
-  height: 214px;
- 
-  background-size: 280px;
-  background-repeat: no-repeat;
-  background-image: url("../img/text-sedona-index.svg");
-}
-
-.reasons__position--sedona::before {
-  content:"";
-  position: absolute;
-  top:363px;
-  left: 0px;
+  padding: 0;
   width: 320px;
-  height: 50px;
+  height: 389px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/bg-back-mobile@1x.jpg");
+}
 
+.reasons--sedona::before {
+  content:"";
+  position: absolute;
+  top: 363px;
+  left: 0px;
+  width: 321px;
+  height: 50px;
+  z-index: 5;
   background-repeat: no-repeat;
   background-image: url("../img/bg-intro-triangle-mobile.svg");
 }
@@ -52,7 +43,6 @@
   margin-top: 0px;
   padding-top: 10px;
   padding-left: 35px;
-
   font-size: @little-font;
   line-height: 26px;
   text-align: center;
