--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,12 +1,11 @@
 .social__list {
   display: flex;
+  .list-reset();
 
   justify-content: center;
   margin-top: 40px;
   margin-left: auto;
   margin-right: auto;
-  padding: 0;
-  list-style: none;
 }
 
 .social__item {
@@ -16,7 +15,6 @@
   width: 46px;
   height: 48px;
   margin-right: 6px;
-  font-size: 0;
 
   background-color: @blue;
 }
@@ -28,7 +26,6 @@
   left: 14px;
   width: 18px;
   height: 14px;
- 
   background-repeat: no-repeat;
   background-image: url("../img/icon-twitter.svg");
 }
@@ -40,7 +37,6 @@
   left: 18.5px;
   width: 9px;
   height: 18px;
- 
   background-repeat: no-repeat;
   background-image: url("../img/icon-facebook.svg");
 }
@@ -52,7 +48,6 @@
   left: 13px;
   width: 20px;
   height: 14px;
- 
   background-repeat: no-repeat;
   background-image: url("../img/icon-youtube.svg");
 }
