Начало работы в модуле 4, 13.04.2020

--- a/source/less/blocks/form-head.less
+++ b/source/less/blocks/form-head.less
@@ -4,7 +4,7 @@
   padding: 0;
 }
 
-.form-head__picture {
+.form-head__position {
   margin: 0;
   padding: 0;
   width: 320px;
@@ -15,10 +15,10 @@
 }
 
 .form-head--sedona::after {
-  content:"";
+  content: "";
   position: absolute;
   top: 132px;
-  left: 0px;
+  left: 1px;
   width: 322px;
   height: 26px;
   background-size: 322px;
@@ -30,7 +30,7 @@
   font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
-  text-align:center;
+  text-align: center;
   text-transform: uppercase;
   color: #000000;
 }
