--- a/source/less/blocks/photos-head.less
+++ b/source/less/blocks/photos-head.less
@@ -4,7 +4,7 @@
   padding: 0;
 }
 
-.photos-head__picture {
+.photos-head__position {
   margin: 0;
   padding: 0;
   width: 320px;
@@ -15,10 +15,10 @@
 }
 
 .photos-head--sedona::after {
-  content:"";
+  content: "";
   position: absolute;
   top: 132px;
-  left: 0px;
+  left: 1px;
   width: 322px;
   height: 26px;
   background-repeat: no-repeat;
@@ -32,7 +32,7 @@
   font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
-  text-align:center;
+  text-align: center;
   text-transform: uppercase;
   color: #000000;
 }
