--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -4,7 +4,7 @@
   padding: 0;
 }
 
-.reasons__index {
+.reasons__index1 {
   margin: 0;
   padding: 0;
   width: 320px;
@@ -15,10 +15,10 @@
 }
 
 .reasons--sedona::before {
-  content:"";
+  content: "";
   position: absolute;
   top: 363px;
-  left: 0px;
+  left: 1px;
   width: 321px;
   height: 50px;
   z-index: 5;
@@ -33,14 +33,14 @@
   font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
-  text-align:center;
+  text-align: center;
   text-transform: uppercase;
   color: #000000;
 }
 
 .reasons__number-one {
   display: inline-block;
-  margin-top: 0px;
+  margin-top: 1px;
   padding-top: 10px;
   padding-left: 35px;
   font-size: @little-font;
