--- a/source/less/blocks/photos-position.less
+++ b/source/less/blocks/photos-position.less
@@ -3,3 +3,15 @@
   margin-top: 25px;
   outline: 1px solid rgba(0, 0, 0, 0.3);
 }
+
+@media (min-width: @tablet-width) {
+  .photos-position {
+    width: 768px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .photos-position {
+    width: 1200px;
+  }
+}
