--- a/source/less/blocks/photos.less
+++ b/source/less/blocks/photos.less
@@ -1,17 +1,15 @@
-.form-section {
+.photos {
   width: 320px;
-  padding: 0;
-  outline: 1px solid #000000;
 }
 
 @media (min-width: @tablet-width) {
-  .form-section {
+  .photos {
     width: 768px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .form-section {
+  .photos {
     width: 1200px;
   }
 }
