--- a/source/less/blocks/places.less
+++ b/source/less/blocks/places.less
@@ -40,3 +40,22 @@
   line-height: 21px;
   text-transform: uppercase;
 }
+
+@media (min-width: @tablet-width) {
+  .places {
+    margin: 0;
+    padding: 50px 10px;
+    width: 255px;
+    height: 256px;
+  }
+
+  .places__title {
+    font-size: @large-font;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .places {
+    width: 399px;
+  }
+}
