--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -51,3 +51,18 @@
   background-repeat: no-repeat;
   background-image: url("../img/icon-youtube.svg");
 }
+
+@media (min-width: @tablet-width) {
+  .social__list {
+    margin: 0;
+    margin-top: 40px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .social__list {
+    margin: 0;
+    margin-top: 40px;
+    margin-right: 150px;
+  }
+}
