--- a/source/less/outlines.less
+++ b/source/less/outlines.less
@@ -1,17 +1,15 @@
-.form-section {
-  width: 320px;
-  padding: 0;
-  outline: 1px solid #000000;
+body {
+  min-height: 750px;
 }
 
 @media (min-width: @tablet-width) {
-  .form-section {
+  body {
     width: 768px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .form-section {
+  body {
     width: 1200px;
   }
 }
