--- a/source/less/blocks/bridge.less
+++ b/source/less/blocks/bridge.less
@@ -38,3 +38,49 @@
   line-height: 21px;
   text-transform: uppercase;
 }
+
+@media (min-width: @tablet-width) {
+  .bridge {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    width: 768px;
+    height: 256px;
+  }
+
+  .bridge__picture {
+    order: -1;
+    width: 512px;
+    height: 256px;
+  }
+
+  .bridge__wrap {
+    width: 255px;
+    height: 256px;
+    padding: 40px auto;
+  }
+
+  .bridge__recomendation br {
+    display: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .bridge {
+    width: 1200px;
+  }
+
+  .bridge__picture {
+    width: 798px;
+  }
+
+  .bridge__picture1 {
+    width: 798px;
+    height: 256px;
+  }
+
+  .bridge__wrap {
+    padding: 50px 20px;
+    width: 400px;
+  }
+}
