--- a/source/less/blocks/form-head.less
+++ b/source/less/blocks/form-head.less
@@ -1,5 +1,6 @@
 .form-head {
   position: relative;
+  width: 320px;
   margin: 0;
   padding: 0;
 }
@@ -14,14 +15,21 @@
   background-image: url("../img/bg-back-mobile@1x.jpg");
 }
 
+.form-head__picture {
+  position: absolute;
+  top: 40px;
+  left: 46px;
+  width: 230px;
+  height: 40px;
+}
+
 .form-head--sedona::after {
   content: "";
   position: absolute;
   top: 132px;
-  left: 1px;
+  left: -0.5px;
   width: 322px;
   height: 26px;
-  background-size: 322px;
   background-repeat: no-repeat;
   background-image: url("../img/bg-intro-triangle-mobile.svg");
 }
@@ -41,4 +49,82 @@
   text-align: center;
   text-transform: uppercase;
   color: #333333;
+}
+
+@media (min-width: @tablet-width) {
+  .form-head {
+    width: 769px;
+  }
+
+  .form-head__position {
+    position: relative;
+    width: 768px;
+    height: 290px;
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+  }
+
+  .form-head__picture {
+    position: absolute;
+    top: 80px;
+    left: 156px;
+    width: 460px;
+    height: 80px;
+  }
+
+  .form-head--sedona::after {
+    content: "";
+    position: absolute;
+    top: 233.5px;
+    left: -1px;
+    width: 768px;
+    height: 57px;
+    background-image: url("../img/bg-intro-triangle-tablet.svg");
+  }
+
+  .form-head__title {
+    font-size: 30px;
+    margin: 50px auto;
+  }
+
+  .form-head__text br {
+    display: none;
+  }
+
+  .form-head__text {
+    width: 428px;
+    margin: 10px auto;
+    margin-bottom: 50px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form-head {
+    width: 1200px;
+  }
+
+  .form-head__position {
+    position: relative;
+    width: 1200px;
+    height: 300px;
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+  }
+
+  .form-head__picture {
+    position: absolute;
+    top: 102px;
+    left: 370px;
+    width: 460px;
+    height: 80px;
+  }
+
+  .form-head--sedona::after {
+    content: "";
+    position: absolute;
+    top: 243.5px;
+    left: 0.1px;
+    width: 1200px;
+    height: 57px;
+    background-repeat: no-repeat;
+    background-image: url("../img/bg-intro-triangle-desktop.svg");
+  }
 }
