--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -31,3 +31,31 @@
   background-image: url("../img/icon-cross.svg");
   cursor: pointer;
 }
+
+@media (min-width: @tablet-width) {
+  .main-nav {
+    width: auto;
+    margin: 0;
+  }
+
+  .main-nav__wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 768px;
+    margin: 0 auto;
+  }
+
+  .main-nav__button {
+    visibility: hidden;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav__logo {
+    height: 187px;
+  }
+
+  .main-nav__wrapper {
+    width: 1280px;
+  }
+}
