--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,3 +1,34 @@
 .map {
   margin-top: 50px;
 }
+
+@media (min-width: @tablet-width) {
+  .map {
+    width: 768px;
+    height: 350px;
+  }
+
+  .map__position {
+    width: 768px;
+  }
+
+  .map__picture {
+    width: 768px;
+    height: 350px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .map {
+    width: 1200px;
+  }
+
+  .map__position {
+    width: 1200px;
+  }
+
+  .map__picture {
+    width: 1200px;
+    height: 350px;
+  }
+}
