--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,17 +1,5 @@
-.page-main {
-  width: 320px;
-  margin: 0;
-  padding: 0;
-}
-
-@media (min-width: @tablet-width) {
-  .page-main {
-    width: 768px;
-  }
-}
-
 @media (min-width: @desktop-width) {
-  .page-main {
+  .page-header {
     width: 1200px;
     margin: 0 40px;
     background-color: #ffffff;
