--- a/source/less/blocks/question.less
+++ b/source/less/blocks/question.less
@@ -36,3 +36,27 @@
   margin: 0;
   padding: 0;
 }
+
+@media (min-width: @tablet-width) {
+  .question {
+    width: 768px;
+    height: 318px;
+  }
+
+  .question__text {
+    font-size: 30px;
+  }
+
+  .button {
+    width: 458px;
+    height: 58px;
+    font-size: @large-font;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .question {
+    width: 1200px;
+    height: 331px;
+  }
+}
