--- a/source/less/blocks/reasons-list.less
+++ b/source/less/blocks/reasons-list.less
@@ -1,4 +1,6 @@
 .reasons-list {
+  display: flex;
+  flex-wrap: wrap;
   .list-reset();
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: none;
