--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -4,6 +4,12 @@
   padding: 0;
 }
 
+.reasons__index {
+  position: absolute;
+  top: 90px;
+  left: 20px;
+}
+
 .reasons__index1 {
   margin: 0;
   padding: 0;
@@ -18,10 +24,9 @@
   content: "";
   position: absolute;
   top: 363px;
-  left: 1px;
   width: 321px;
   height: 50px;
-  z-index: 5;
+
   background-repeat: no-repeat;
   background-image: url("../img/bg-intro-triangle-mobile.svg");
 }
@@ -48,4 +53,79 @@
   text-align: center;
   text-transform: uppercase;
   color: #333333;
+}
+
+@media (min-width: @tablet-width) {
+  .reasons__index1 {
+    display: flex;
+    margin: auto;
+    width: 768px;
+    height: 516px;
+  }
+
+  .reasons__index {
+    position: absolute;
+    top: 77px;
+    left: 154px;
+    width: 460px;
+    height: 350px;
+  }
+
+  .reasons--sedona::before {
+    position: absolute;
+    top: 460px;
+    left: 0.2px;
+    width: 768px;
+    height: 57px;
+
+    background-repeat: no-repeat;
+    background-image: url("../img/bg-intro-triangle-tablet.svg");
+  }
+
+  .reasons__position {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .reasons__position br {
+    display: none;
+  }
+
+  .reasons__number-zero {
+    width: 490px;
+    margin: auto;
+    font-size: @large-font;
+    font-weight: 700;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .reasons__index1 {
+    width: 1200px;
+  }
+
+  .reasons__index {
+    position: absolute;
+    top: 77px;
+    left: 350px;
+    width: 460px;
+    height: 350px;
+  }
+
+  .reasons--sedona::before {
+    position: absolute;
+    top: 460px;
+    left: 0.2px;
+    height: 57px;
+    width: 1200px;
+    background-image: url("../img/bg-intro-triangle-desktop.svg");
+  }
+
+  .reasons__number-zero {
+    margin-top: 50px;
+  }
+
+  .reasons__number-one {
+    margin-bottom: 50px;
+  }
 }
