--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -6,8 +6,6 @@
 }
 
 .site-list__item {
-  z-index: 5;
-
   width: 320px;
   height: 55.5px;
   margin: 0;
@@ -15,7 +13,6 @@
 
   line-height: 55px;
   text-align: center;
-  font-size: 0;
 
   background-color: @blue;
   border: 1px solid rgba(0, 0, 0, 0.2);
@@ -42,4 +39,53 @@
 .site-list__item-down {
   position: relative;
   background-color: #ffffff;
+  z-index: 5;
+}
+
+@media (min-width: @tablet-width) {
+  .site-list {
+    width: 768px;
+  }
+
+  .site-list__item {
+    width: 153px;
+    background-color: #ffffff;
+    border: none;
+  }
+
+  .site-list__item a {
+    font-size: @little-font;
+    color: #000000;
+  }
+
+  .site-list__item-down {
+    width: 156px;
+  }
+
+  .site-list__item5 {
+    order: 2;
+  }
+
+  .site-list__item3 {
+    order: 3;
+  }
+
+  .site-list__item4 {
+    order: 3;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .site-list {
+    width: 1200px;
+    margin: 0;
+  }
+
+  .site-list__item {
+    width: 239px;
+  }
+
+  .site-list__item-down {
+    width: 244px;
+  }
 }
