--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -9,9 +9,15 @@ html {
 }
 
 body {
-  display: block;
-  width: 321px;
+  min-width: 321px;
+  margin: 0;
+  padding: 0;
   font-family: "PT Sans", "Arial", sans-serif;
   color: #000000;
   background-color: #ffffff;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
