--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,8 +1,11 @@
 @import "fonts.less";
-@import "main.less";
+@import "scaffolding.less";
 @import "mixins.less";
+@import "outlines.less";
 @import "normalize.less";
 @import "variables.less";
+@import "blocks/body.less";
+@import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/site-list.less";
 @import "blocks/visually-hidden.less";
@@ -21,8 +24,10 @@
 @import "blocks/social.less";
 @import "blocks/copyright.less";
 @import "blocks/footer.less";
+@import "blocks/photos.less";
 @import "blocks/photos-head.less";
 @import "blocks/photos-list.less";
+@import "blocks/photo-page.less";
 @import "blocks/photos-position.less";
 @import "blocks/photos-item.less";
 @import "blocks/form-head.less";
@@ -33,3 +38,5 @@
 @import "blocks/checkbox.less";
 @import "blocks/discription.less";
 @import "blocks/map.less";
+@import "blocks/form-page.less";
+@import "blocks/button-form.less";
