--- a/source/less/outlines.less
+++ b/source/less/outlines.less
@@ -1,15 +1,15 @@
-body {
+.dimention {
   min-height: 750px;
 }
 
 @media (min-width: @tablet-width) {
-  body {
+  .dimention {
     width: 768px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  body {
+  .dimention {
     width: 1200px;
   }
 }
