--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -8,7 +8,6 @@
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
-  width: 320px;
 }
 
 .main-nav__logo-image {
@@ -41,7 +40,7 @@
   .main-nav__wrapper {
     display: flex;
     justify-content: space-between;
-    width: 768px;
+    width: auto;
     margin: 0 auto;
   }
 
@@ -53,9 +52,5 @@
 @media (min-width: @desktop-width) {
   .main-nav__logo {
     height: 187px;
-  }
-
-  .main-nav__wrapper {
-    width: 1280px;
   }
 }
