--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,9 +1,9 @@
 @import "fonts.less";
-@import "scaffolding.less";
 @import "mixins.less";
-@import "outlines.less";
 @import "normalize.less";
 @import "variables.less";
+@import "scaffolding.less";
+@import "block/container.less";
 @import "blocks/main-nav.less";
 @import "blocks/site-list.less";
 @import "blocks/visually-hidden.less";
