--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,12 +1,12 @@
-@import "fonts.less";
-@import "mixins.less";
 @import "normalize.less";
 @import "variables.less";
 @import "scaffolding.less";
-@import "block/container.less";
+@import "fonts.less";
+@import "blocks/visually-hidden.less";
+@import "mixins.less";
+@import "blocks/container.less";
 @import "blocks/main-nav.less";
 @import "blocks/site-list.less";
-@import "blocks/visually-hidden.less";
 @import "blocks/places.less";
 @import "blocks/advantages.less";
 @import "blocks/reasons.less";
