Задание 1 модуль 5 сделанные в ветке мастер

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -46,9 +46,9 @@
 .advantages__home--home::after {
   content: "";
   position: absolute;
-  top: 22px;
-  left: 3px;
-  width: 37px;
+  top: 23px;
+  left: 2px;
+  width: 35px;
   height: 36px;
   background-repeat: no-repeat;
   background-image: url("../img/icon-house37x36.svg");
@@ -58,7 +58,7 @@
   content: "";
   position: absolute;
   top: 151px;
-  left: 6px;
+  left: 5px;
   width: 32px;
   height: 38px;
   background-repeat: no-repeat;
@@ -69,7 +69,7 @@
   content: "";
   position: absolute;
   top: 268px;
-  left: 1px;
+  left: -2px;
   width: 40px;
   height: 35px;
   background-repeat: no-repeat;
@@ -85,15 +85,31 @@
 }
 
 @media (min-width: @tablet-width) {
+  .advantages {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 756px;
+    min-width: 310px;
+    margin: 0;
+    padding-top: 158px;
+    padding-left: 0;
+  }
+
   .advantages__home {
     margin: 0;
     padding: 0;
+    margin-right: 30px;
+    margin-left: 13px;
+    margin-bottom: 71px;
     width: 156px;
     height: 100px;
   }
 
   .advantages__souvenires {
     margin: 0;
+    margin-left: 20px;
     padding: 0;
     width: 163px;
     height: 101px;
@@ -107,26 +123,24 @@
     height: 100px;
   }
 
-  .advantages {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 756px;
-    height: 310px;
-    margin: 0;
-    padding-top: 100px;
+  .advantages__meal br {
+    display: none;
   }
 
   .advantages__title {
     display: block;
     font-size: @large-font;
     text-align: center;
+    margin: 0;
+    padding: 0;
   }
 
   .advantages__description {
+    display: inline-block;
     font-size: @little-font;
     text-align: center;
+
+    margin-top: 20px;
   }
 
   .advantages__description br {
@@ -136,8 +150,8 @@
   .advantages__home--home::after {
     content: "";
     position: absolute;
-    top: 22px;
-    left: 80px;
+    top: 57px;
+    left: 90px;
     width: 75px;
     height: 72px;
     background-repeat: no-repeat;
@@ -147,8 +161,8 @@
   .advantages__souvenires--souvenires::after {
     content: "";
     position: absolute;
-    top: 10px;
-    left: 350px;
+    top: 57px;
+    left: 607px;
     width: 77px;
     height: 75px;
     background-repeat: no-repeat;
@@ -158,8 +172,8 @@
   .advantages__meal--meal::after {
     content: "";
     position: absolute;
-    top: 10px;
-    left: 600px;
+    top: 60px;
+    left: 345px;
     width: 77px;
     height: 75px;
     background-repeat: no-repeat;
@@ -171,13 +185,14 @@
   .advantages {
     width: 1200px;
     height: 330px;
+    padding-right: 20px;
   }
 
   .advantages__home--home::after {
     content: "";
     position: absolute;
-    top: 22px;
-    left: 160px;
+    top: 57px;
+    left: 162px;
     width: 75px;
     height: 72px;
     background-repeat: no-repeat;
@@ -187,8 +202,8 @@
   .advantages__souvenires--souvenires::after {
     content: "";
     position: absolute;
-    top: 10px;
-    left: 570px;
+    top: 57px;
+    left: 970px;
     width: 77px;
     height: 75px;
     background-repeat: no-repeat;
@@ -198,11 +213,33 @@
   .advantages__meal--meal::after {
     content: "";
     position: absolute;
-    top: 10px;
-    left: 950px;
+    top: 60px;
+    left: 564px;
     width: 77px;
     height: 75px;
     background-repeat: no-repeat;
     background-image: url("../img/icon-burger.svg");
+  }
+
+  .advantages__home {
+    width: 252px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .advantages__meal {
+    width: 283px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .advantages__souvenires {
+    width: 214px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .advantages__souvenires br {
+    display: none;
   }
 }
