--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -3,7 +3,7 @@ footer {
   width: 320px;
   margin: 0;
   padding: 0;
-  padding-top: 30px;
+  padding-top: 33px;
 
   min-height: 233px;
 }
@@ -12,7 +12,7 @@ footer {
   display: block;
   margin: 0;
   padding: 0;
-  padding-top: 37px;
+  padding-top: 44px;
 }
 
 .footer__title {
@@ -31,6 +31,7 @@ footer {
   .footer {
     display: flex;
     flex-wrap: wrap;
+    padding: 10px 30px;
     width: 768px;
     height: 120px;
   }
@@ -39,18 +40,20 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 510px;
+    width: 434px;
     height: 120px;
+    padding-top: 26px;
   }
 
   .footer__title {
-    margin-top: 40px;
+    margin-top: 12px;
     margin-left: 30px;
   }
 
   .footer__copyright {
     width: 255px;
     height: 120px;
+    padding-top: 40px;
   }
 }
 
