--- a/source/less/blocks/bridge.less
+++ b/source/less/blocks/bridge.less
@@ -10,6 +10,11 @@
   background-color: @blue;
 }
 
+.bridge__wrap {
+  margin: 0;
+  padding: 0;
+}
+
 .bridge__title {
   display: block;
   margin: 0;
@@ -18,6 +23,10 @@
   font-weight: 700;
   line-height: 26px;
   text-transform: uppercase;
+}
+
+.bridge__title br {
+  display: none;
 }
 
 .bridge__number {
@@ -39,6 +48,17 @@
   text-transform: uppercase;
 }
 
+.bridge__picture {
+  margin: 0;
+  padding: 0;
+
+}
+
+.bridge__picture1 {
+  margin: 0;
+  padding: 0;
+}
+
 @media (min-width: @tablet-width) {
   .bridge {
     display: flex;
@@ -55,13 +75,33 @@
   }
 
   .bridge__wrap {
+    display: block;
     width: 255px;
     height: 256px;
-    padding: 40px auto;
+    padding-top: 46px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
 
-  .bridge__recomendation br {
-    display: none;
+  .bridge__title {
+    display: block;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 10px;
+    font-size: @large-font;
+  }
+
+  .bridge__number {
+    display: block;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 22px;
+  }
+
+  .bridge__recomendation {
+    display: block;
+    margin: 0;
+    padding: 0;
   }
 }
 
