--- a/source/less/blocks/places.less
+++ b/source/less/blocks/places.less
@@ -43,14 +43,30 @@
 
 @media (min-width: @tablet-width) {
   .places {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 0;
-    padding: 50px 10px;
+    padding: 47px 60px;
     width: 255px;
     height: 256px;
   }
 
   .places__title {
+    width: 130px;
     font-size: @large-font;
+  }
+
+  .places__number {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 23px;
+  }
+
+  .places__recomendation {
+    margin: 0;
+    padding: 0;
   }
 }
 
