--- a/source/less/blocks/realtown.less
+++ b/source/less/blocks/realtown.less
@@ -14,6 +14,7 @@
   display: block;
   margin: 0;
   padding: 0;
+  padding-top: 66px;
   min-height: 220px;
   text-align: center;
   color: #ffffff;
@@ -33,10 +34,9 @@
 
 .realtown__title {
   display: inline-block;
-  margin-bottom: 1px;
-  padding-top: 49px;
-  padding-bottom: 1px;
-  font-size: 18px;
+  margin: 0;
+  padding: 0;
+  font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-transform: uppercase;
@@ -44,8 +44,9 @@
 
 .realtown__number {
   display: block;
-  margin-top: 1px;
-  padding-top: 10px;
+  margin: 0;
+  padding: 0;
+  margin-top: 9px;
   font-size: @little-font;
   font-weight: 400;
   line-height: 20px;
@@ -56,6 +57,7 @@
   padding: 0;
   margin: 0;
   padding-top: 15px;
+  margin-right: 10px;
   font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
@@ -70,6 +72,8 @@
   }
 
   .realtown__wrap {
+    margin: 0;
+    padding: 45px;
     width: 256px;
     height: 256px;
   }
@@ -81,6 +85,16 @@
   .realtown__title {
     margin: 0;
     padding: 0;
+    font-size: @large-font;
+  }
+
+  .realtown__recomendation br {
+    display: none;
+  }
+
+  .realtown__recomendation {
+    margin: 0;
+    padding-top: 22px;
   }
 
   .realtown__picture {
@@ -91,10 +105,31 @@
 
 @media (min-width: @desktop-width) {
   .realtown__wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 400px;
+    padding: 51px;
+  }
+
+  .realtown__title {
+    width: 200px;
+    margin: 0;
+    padding: 0;
+    font-size: @large-font;
+  }
+
+  .realtown__number {
+    margin-bottom: 21px;
+  }
+
+  .realtown__recomendation {
+    width: 280px;
+    margin: 0;
+    padding: 0;
   }
 
   .realtown__picture {
-    width: 798px;
+    width: 799.5px;
   }
 }
