--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -15,8 +15,9 @@
   text-align: center;
 
   background-color: @blue;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-bottom: none;
+  border-bottom: 1px solid rgba(1, 1, 1, 0.2);
+  box-shadow: 0px 1px 0px 0px rgba(1, 1, 1, 0.2);
+  box-shadow: inset 0 1 0 0 rgba(255, 255, 255, 0.2)
 }
 
 .site-list__item-top {
@@ -40,6 +41,10 @@
   position: relative;
   background-color: #ffffff;
   z-index: 5;
+  box-shadow: none;
+}
+.site-list__item5 {
+  border: none;
 }
 
 @media (min-width: @tablet-width) {
