--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -33,7 +33,7 @@
 
 .reasons__number-zero {
   display: inline-block;
-  padding-top: 22px;
+  padding-top: 20px;
   padding-left: 30px;
   font-size: @medium-font;
   font-weight: 700;
@@ -47,7 +47,7 @@
   display: inline-block;
   margin-top: 1px;
   padding-top: 10px;
-  padding-left: 34px;
+  padding-left: 35px;
   font-size: @little-font;
   line-height: 26px;
   text-align: center;
@@ -93,21 +93,9 @@
 
   .reasons__number-zero {
     width: 490px;
-    margin: 52px auto;
-    margin-bottom: 18px;
-    padding: 0;
-    padding-right: 10px;
+    margin: auto;
     font-size: @large-font;
     font-weight: 700;
-  }
-
-  .reasons__number-one {
-    margin: 0;
-    padding: 0;
-    margin: 0 auto;
-    padding-top: 10px;
-    padding-right: 5px;
-    margin-bottom: 51px;
   }
 }
 
@@ -118,8 +106,8 @@
 
   .reasons__index {
     position: absolute;
-    top: 78px;
-    left: 371px;
+    top: 77px;
+    left: 350px;
     width: 460px;
     height: 350px;
   }
@@ -134,10 +122,7 @@
   }
 
   .reasons__number-zero {
-    margin: 52px auto;
-    margin-bottom: 19px;
-    padding: 0;
-    padding-right: 5px;
+    margin-top: 50px;
   }
 
   .reasons__number-one {
