Модуль 5 задание 1 правка 2 от 21.04.2020

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -191,8 +191,8 @@
   .advantages__home--home::after {
     content: "";
     position: absolute;
-    top: 57px;
-    left: 162px;
+    top: 60px;
+    left: 161px;
     width: 75px;
     height: 72px;
     background-repeat: no-repeat;
@@ -203,7 +203,7 @@
     content: "";
     position: absolute;
     top: 57px;
-    left: 970px;
+    left: 968px;
     width: 77px;
     height: 75px;
     background-repeat: no-repeat;
@@ -213,8 +213,8 @@
   .advantages__meal--meal::after {
     content: "";
     position: absolute;
-    top: 60px;
-    left: 564px;
+    top: 62px;
+    left: 561px;
     width: 77px;
     height: 75px;
     background-repeat: no-repeat;
@@ -228,15 +228,18 @@
   }
 
   .advantages__meal {
-    width: 283px;
+    display: block;
+    width: 315px;
     margin: 0;
     padding: 0;
+    padding-right: 15px;
   }
 
   .advantages__souvenires {
-    width: 214px;
+    width: 200px;
     margin: 0;
     padding: 0;
+    padding-right: 10px;
   }
 
   .advantages__souvenires br {
