--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -40,3 +40,12 @@
     left: 217px;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .copyright__link--htmlacademy::before {
+    content: "";
+    position: absolute;
+    top: 41px;
+    left: 214px;
+  }
+}
