--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -61,12 +61,29 @@ footer {
   .footer {
     display: flex;
     width: 1200px;
+    padding: 0;
   }
 
   .footer__social {
     display: flex;
     flex-direction: row;
-    width: 900px;
     justify-content: space-between;
+    width: 681px;
+    margin: 0;
+    padding: 0;
+    padding-top: 32px;
+    outline: 1px solid #d31c1c;
+  }
+
+  .footer__title {
+    margin-left: 120px;
+  }
+
+  .footer__copyright {
+    width: 255px;
+    height: 120px;
+    margin-left: 157px;
+    padding-top: 45px;
+    outline: 1px solid #d31c1c;
   }
 }
