--- a/source/less/blocks/photos-head.less
+++ b/source/less/blocks/photos-head.less
@@ -57,6 +57,7 @@
 @media (min-width: @tablet-width) {
   .photos-head {
     width: 768px;
+    min-height: 513px;
   }
 
   .photos-head__position {
@@ -87,6 +88,8 @@
 
   .photos-head__title {
     font-size: 30px;
+    margin-top: 55px;
+    margin-bottom: 20px;
   }
 
   .photos-head__text br {
@@ -96,7 +99,7 @@
 
   .photos-head__text {
     width: 428px;
-    margin: 10px auto;
+    margin: 0px auto 10px;
   }
 }
 
