--- a/source/less/blocks/photos-item.less
+++ b/source/less/blocks/photos-item.less
@@ -72,9 +72,47 @@
     background-color: #ffffff;
   }
 
+  .photos-item__positionsunset{
+    height: 400px;
+  }
+
   .photos-item__picture {
     width: 324px;
     height: 267px;
+  }
+
+  .photos-item__sunset {
+    margin-left: 40px;
+  }
+
+  .photos-item__text-wrap {
+    width: 145px;
+    height: 60px;
+    margin: 0;
+    margin-left: 20px;
+    margin-top: 8px;
+  }
+
+  .photos-item__title {
+    margin: 0;
+  }
+
+  .photos-item__positionlikes {
+    width: 88px;
+    height: 60px;
+    margin-top: 8px;
+  }
+
+  .photos-item__likes {
+    display: inline-block;
+    margin-top: 13px;
+    margin-left: 3px;
+    background-color: #f2f2f2;
+    opacity: 0.3;
+  }
+
+  .photos-item__numbers {
+    margin-left: 4px;
   }
 
   .photos-item__text-wrap1 {
@@ -92,18 +130,12 @@
     padding: 0;
     width: 648px;
     height: 480px;
-    background-color: #ffffff;
+    background-color: #f2f2f2;
   }
 
   .photos-item__picture-sunset {
     width: 647px;
     height: 400px;
-  }
-
-  .photos-item__text-wrap {
-    width: 145px;
-    height: 37px;
-    margin: 0;
   }
 }
 
