--- a/source/less/blocks/places.less
+++ b/source/less/blocks/places.less
@@ -72,6 +72,25 @@
 
 @media (min-width: @desktop-width) {
   .places {
-    width: 399px;
+    width: 399.9px;
+  }
+
+  .places__number {
+    margin-bottom: 21px;
+  }
+
+  .places__recomendation {
+    width: 300px;
+    margin: 0;
+    padding: 0;
+    outline: 1px solid #dd1c1c;
+  }
+
+  .places__recomendation br {
+    display: none;
+  }
+
+  .places__shortrecomendation {
+    width: 262px;
   }
 }
