--- a/source/less/blocks/question.less
+++ b/source/less/blocks/question.less
@@ -77,7 +77,35 @@
 
 @media (min-width: @desktop-width) {
   .question {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
     width: 1200px;
-    height: 331px;
+    min-height: 331px;
+    padding-bottom: 21px;
   }
+
+  .question__text {
+    margin-bottom: 31px;
+  }
+
+  .question__content {
+    display: block;
+    width: 434px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .question__search a {
+    display: block;
+    margin: 0;
+    padding: 0;
+  }
+
+  .button a {
+    margin: 0;
+    padding: 0;
+  }
+
 }
