--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -63,7 +63,6 @@
 @media (min-width: @desktop-width) {
   .social__list {
     margin: 0;
-    margin-top: 40px;
-    margin-right: 150px;
+    padding: 0;
   }
 }
